# web-dev-competition

./: .gitignore  README.md  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx  schemas.py  services.py  storage.py
components/nova/: About.tsx  BookingModal.tsx  Fleet.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Preloader.tsx  Tours.tsx  Training.tsx
lib/: api.ts
