[tool.poetry]
name = "space-tourism-agency-backend"
version = "0.1.0"
description = "FastAPI backend for space tourism agency website"
authors = ["Competition Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = { extras = ["email"], version = "^2.11.1" }

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
